--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	  body{
 		font-family: Garamond, Georgia, serif;
 		line-height: 1.9em;
-	  }
+	  } 
 	  
 	  .text-piece{
 		padding:20px;
@@ -54,7 +54,7 @@
   	
   	<header class="container">
 		<div class="my-5 jumbotron">
-			<h1>What Remains of Bears Ears</h1>
+			<h1>Hayward Fault</h1>
 			<p class="lead">Utah’s politically contentious southeast corner is a living landscape of culture and civilization</p>
 		</div>
     </header>
